--- a/AccountMaintenance/templates/account_add.html
+++ b/AccountMaintenance/templates/account_add.html
@@ -1,7 +1,3 @@
-
-
-
-
 {% extends 'base.html' %}
 
 {% block content %}
@@ -10,36 +6,19 @@
 
   <form action="" method="post">
     {% csrf_token %}
-<!--        <label>-->
-<!--          Maintenance Type:-->
-<!--          <input type="text"-->
-<!--                 name="maintenance_type">-->
-<!--        </label>-->
+
     <p><b>Maintenance Code: </b>A</p>
     <p><b>Country Code: </b>{{ add_form.country_code }}</p>
     <p><b>Account Number: </b>{{ add_form.account_number }}</p>
     <p><b>Account Name: </b>{{ add_form.account_name }}</p>
     <p><b>Currency: </b>{{ add_form.currency }}</p>
-
-
+    <p><b>Keep subsidiary: </b>{{ add_form.keep_subsidiary }}</p>
+    <p><b>Requestor: </b>{{ add_form.requestor }}</p>
+    <p><b>Approver: </b>{{ add_form.approver }}</p>
+    <p><b>Additional_info: </b>{{ add_form.additional_info }}</p>
+    <p><b>Created_by: </b>{{ add_form.created_by }}</p>
 
     <input type="submit" value="Submit">
   </form>
 
-
-
-<!--    <h2>Account Information</h2>-->
-<!--    <p><b>Maintenance Code: </b>{{ maintenance_type }}</p>-->
-<!--    <p><b>Nazwisko: </b>{{ student.last_name }}</p>-->
-<!--    <p><b>Rok urodzenia: </b>{{ student.year_of_birth }}</p>-->
-<!--    <p><b>Klasa: </b>{{ student.get_school_class_display }}</p>-->
-
-<!--    <h2>Przedmioty</h2>-->
-<!--    <ul>-->
-<!--    {% for subject in school_subjects %}-->
-<!--        <li>-->
-<!--            <a href={% url 'student-grade' student_id=student.id subject_id=subject.id %}>{{ subject.name }}</a>-->
-<!--        </li>-->
-<!--    {% endfor %}-->
-<!--    </ul>-->
 {% endblock %}
