--- a/AccountMaintenance/templates/home.html
+++ b/AccountMaintenance/templates/home.html
@@ -19,15 +19,13 @@
 
           <h3>Create GL account using UPLOAD option</h3>
 
-              <p><a href='/upload'>Upload Excel</a></p>
+            <p><a href='/upload'>Upload Excel</a></p>
+
+          <h3>View Account List (authorized users only)</h3>
+
+            <p><a href='/accounts'>Account List</a></p>
+
       </ol>
-
-
-<!--      <form method="post" enctype="multipart/form-data">-->
-<!--          {% csrf_token %}-->
-<!--          <input type="file" name="excel_file">-->
-<!--          <button type="submit">Upload</button>-->
-<!--      </form>-->
 
 </body>
 </html>
