--- a/AccountMaintenance/templates/account_delete.html
+++ b/AccountMaintenance/templates/account_delete.html
@@ -2,24 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Account change ONLINE form</title>
+    <title>Account delete ONLINE form</title>
 </head>
 <body>
 
   <h1/>Account delete ONLINE form</h1>
 
-    <form action="" method="post">
-    {% csrf_token %}
+  <form method="post" action="{% url 'account_delete' %}">
+  {% csrf_token %}
 
+    <p><b>Maintenance Code: </b>D</p>
     <p><b>Country Code: </b>{{ delete_form.country_code }}</p>
     <p><b>Account Number: </b>{{ delete_form.account_number }}</p>
     <p><b>Account Name: </b>{{ delete_form.account_name }}</p>
+    <p><b>Requestor: </b>{{ delete_form.requestor }}</p>
+    <p><b>Approver: </b>{{ delete_form.approver }}</p>
+    <p><b>Additional_info: </b>{{ delete_form.additional_info }}</p>
+    <p><b>Created_by: </b>{{ delete_form.created_by }}</p>
 
-        <input type="submit" value="Submit">
-
-    </form>
+  <button type="submit">Submit</button>
+</form>
 
 </body>
 
-</body>
 </html>
